camel-hbase: fix deprecation warnings